<resources>
    <string name="app_name">尋找子字串</string>
    <string name="interval">間隔數量</string>
    <string name="end_with">結尾</string>
    <string name="start_with">開頭</string>
    <string name="submit">送出</string>
    <string name="target">目標字串</string>
    <string name="set_default">設定測試資料</string>
    <string name="clear">清除</string>
    <string name="default_target">aba51bc2b</string>
</resources>
