<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="Autofill">

        <EditText
            android:id="@+id/et_start_with"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/start_with"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_end_with"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/end_with"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/interval"
            android:inputType="number"
            android:textSize="20sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/target"
        android:inputType="text"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textSize="20sp" />

</LinearLayout>